--- a/HM/hmn.html
+++ b/HM/hmn.html
@@ -8,7 +8,7 @@
             <link rel="stylesheet" href="dom.css">
             <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
          <title>
-            DOM
+            HANGMAN
         </title>
         
     </head>
